Fixed Drawer Close button position, Logout Button position, Horizontal Scroll, Active Link Border Radius

--- a/MyApp/wwwroot/css/style.css
+++ b/MyApp/wwwroot/css/style.css
@@ -18,6 +18,7 @@ body{
     color: white;
     background-color: #3c343a; 
     border:1px solid #fa6602;
+    border-radius: 5px;
     }
     .mud-appbar {
     width: 100%;
